Прочитал Десять негритят

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
-<th><img src="jpg/sila_silnih.jpg" title="Сила сильных (сборник)"></th>
+<th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
+<th><a id="a170" src="jpg/sila_silnih.jpg" title="Сила сильных (сборник) (аудиокнига)"></a></th>
 <th><a id="a169" src="jpg/metro_24.jpg" title="24. Слепящая пустота (аудиокнига)"></a></th>		
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
 <th><img src="jpg/new_pravila.jpg" title="Новые правила деловой переписки"></th> 
@@ -1330,6 +1331,7 @@
 <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
 <th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th> 
 <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
+<th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
 </tr></table>
 
 
@@ -1392,7 +1394,7 @@
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/pisma.jpg" title="Письма о добром и прекрасном"></th>	
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/sila_silnih.jpg" title="Сила сильных (сборник)"></th>
+<th><a id="a170" src="jpg/sila_silnih.jpg" title="Сила сильных (сборник) (аудиокнига)"></a></th>
 </tr></table>
 
 
