--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a171" src="jpg/tom_soer_1.jpg" title="Приключения Тома Сойера (аудиокнига)"></a></th>
 <th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
 <th><a id="a170" src="jpg/sila_silnih.jpg" title="Сила сильных (сборник) (аудиокнига)"></a></th>
 <th><a id="a169" src="jpg/metro_24.jpg" title="24. Слепящая пустота (аудиокнига)"></a></th>		
@@ -1884,7 +1885,8 @@
 					<a href="http://flibusta.is/a/20554"> и Б.</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/20510">Сунь-Цзы</a></h4></th>
 <th colspan="3"><h4><a href="https://flibusta.is/a/12281">Тарас Анатолий</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/64713">Тиньков Олег</a></h4></th>
+<th colspan="3"><h4><a href="http://flibusta.is/a/12696"> Твен Марк</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/64713">Тиньков Олег</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/piknik_na_obochine.jpg" title="Пикник на обочине"></th>
 <th><img src="jpg/0.jpg"></th>
@@ -1892,6 +1894,8 @@
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/spytnik_razvedchika.jpg" title="Спутник разведчика и партизана"></th>
 <th><img src="jpg/boevaia_mashina.jpg" title="Боевая машина"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><a id="a171" src="jpg/tom_soer_1.jpg" title="Приключения Тома Сойера (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a30" src="jpg/tin'kov.jpg" title="Как стать бизнесменом (аудиокнига)"></a></th>
 </tr></table>
