--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/strelok.jpg" title="Стрелок"></th>
 <th><a id="a171" src="jpg/tom_soer_1.jpg" title="Приключения Тома Сойера (аудиокнига)"></a></th>
 <th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
 <th><a id="a170" src="jpg/sila_silnih.jpg" title="Сила сильных (сборник) (аудиокнига)"></a></th>
@@ -1208,7 +1209,7 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4>									  Кинг Бернард</h4></th>
-<th colspan="4"><h4><a href="https://flibusta.is/a/5803"> Кинг Стивен</a></h4></th>
+<th colspan="5"><h4><a href="https://flibusta.is/a/5803"> Кинг Стивен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/17765">Киплинг Редьярд</a></h4></th>
 </tr><tr>  
 <th><a id="a2" src="jpg/privychki_uspeshnykh_lyudey.jpg" title="Привычки успешных людей (аудиокнига)"></a></th>
@@ -1216,6 +1217,7 @@
 <th><img src="jpg/pobeg_iz_shoushenka.jpg" title="Рита Хейуорт и спасение из Шоушенка"></th>
 <th><img src="jpg/zelenaya_milya.jpg" title="Зеленая Миля"></th>
 <th><img src="jpg/dolgaia_progylka.jpg" title="Долгая прогулка"></th>
+<th><img src="jpg/strelok.jpg" title="Стрелок"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a54" src="jpg/kniga_djunglei.jpg" title="Книга джунглей (аудиокнига)"></a></th> 
 <th><img src="jpg/0.jpg"></th>
