Прочитал Далекое светлое будущее

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a173" src="jpg/atomic_heart_2.jpg" title="Atomic Heart. Далекое светлое будущее (аудиокнига)"></a></th>
 <th><a id="a172" src="jpg/tom_soer_2.jpg" title="Приключения Гекльберри Финна (аудиокнига)"></a></th>
 <th><img src="jpg/strelok.jpg" title="Стрелок"></th>
 <th><a id="a171" src="jpg/tom_soer_1.jpg" title="Приключения Тома Сойера (аудиокнига)"></a></th>
@@ -2016,123 +2017,127 @@
 
 <table><tr align="left"> 
 <th colspan="3"><h4><a href="https://flibusta.is/a/11">	   Хокинг Стивен</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/286751">Хорф Харальд</a></h4></th>
-<th colspan="5"><h4><a href="https://flibusta.is/a/58577"> Цацулин Павел</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="https://flibusta.is/a/19614"> Цунэтомо Ямамото</a>&nbsp;&nbsp;
-					<a href="https://flibusta.is/a/6117">  Чалдини Роберт</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/286751">Хорф Харальд и др.</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/58577"> Цацулин Павел</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/19614"> Цунэтомо Ямамото</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/hoking_1.jpg" title="Теория всего. От сингулярности до бесконечности, происхождение и судьба Вселенной"></th>
 <th><a id="a42" src="jpg/hoking_2.jpg" title="Краткая история времени. От Большого взрыва до черных дыр (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a118" src="jpg/atomic_heart.jpg" title="Atomic Heart. Предыстория Предприятия 3826 (аудиокнига)"></a></th>
+<th><a id="a173" src="jpg/atomic_heart_2.jpg" title="Atomic Heart. Далекое светлое будущее (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/bezoruzhnyy_voin.jpg" title="Безоружный воин"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/bysido_2.jpg" title="Хагакурэ"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/psihologia_vliania.jpg" title="Психология влияния (4-е издание)"></th>
 </tr></table>
 
 
 
 <table><tr align="left">
+<th colspan="2"><h4><a href="https://flibusta.is/a/6117">  Чалдини Роберт</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/1884">  Чан Джеки</a></h4></th>
 <th colspan="3"><h4><a href="https://flibusta.is/a/1944">  Чепмен Гэри</a></h4></th>
-<th colspan="6"><h4><a href="https://flibusta.is/a/105940">Черненко Алексей</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/psihologia_vliania.jpg" title="Психология влияния (4-е издание)"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/chan.jpg" title="Я - Джеки Чан"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/12_voprosov.jpg" title="Одной любви недостаточно. 12 вопросов, на которые нужно ответить, прежде чем решиться на брак"></th>
 <th><img src="jpg/izvini.jpg" title="Когда извинений недостаточно"></th>
 <th><img src="jpg/0.jpg"></th>
+</tr></table>
+
+
+
+<table><tr align="left"> 
+<th colspan="6"><h4><a href="https://flibusta.is/a/105940">Черненко Алексей</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/20781"> Чехов А.П.</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/154459">Чеширко Евгений</a></h4></th>
+</tr><tr>  
 <th><img src="jpg/lord_dark_2.jpg" title="Лорд Дарк. Ученик"></th>
 <th><img src="jpg/lord_dark_3.jpg" title="Лорд Дарк. Колдун"></th>
 <th><img src="jpg/lord_dark_4.jpg" title="Лорд Дарк. Всадник"></th>
 <th><img src="jpg/lord_dark_1.jpg" title="Лорд Дарк. Наемник"></th>
 <th><img src="jpg/lord_dark_5.jpg" title="Лорд Дарк. Лорд"></th> 
-</tr></table>
-
-
-
-<table><tr align="left"> 
-<th colspan="2"><h4><a href="https://flibusta.is/a/20781"> Чехов А.П.</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/154459">Чеширко Евгений</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/169016">Шагабутдинов Ренат</a></h4></th>
-</tr><tr>  
+<th><img src="jpg/0.jpg"></th>
 <th><a id="a94" src="jpg/v_sad.jpg" title="Вишневый сад (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/dnevnik_domovogo.jpg" title="Дневник Домового"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/zariazhen_na_100.jpg" title="Заряжен на 100%"></th>
-<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.is/a/169016">Шагабутдинов Ренат</a></h4></th>
 <th colspan="6"><h4><a href="https://flibusta.is/a/25175">Шарма Робин</a></h4></th>
-<th colspan="5"><h4><a href="https://flibusta.is/a/20365">Шварценеггер Арнольд</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/zariazhen_na_100.jpg" title="Заряжен на 100%"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/robin_sharma_1.jpg" title="Кто заплачет когда ты умрешь"></th>
 <th><img src="jpg/robin_sharma_2.jpg" title="9 тайных посланий от монаха, который продал свой «феррари»"></th>
 <th><img src="jpg/robin_sharma_3.jpg" title="Путь к величию"></th>
 <th><a id="a25" src="jpg/robin_sharma_4.jpg" title="Монах, который продал свой «феррари» (аудиокнига)"></a></th> 
 <th><img src="jpg/robin_sharma_5.jpg" title="Клуб 5 часов утра"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/vspomnit_vse.jpg" title="Вспомнить всё. Моя невероятно правдивая история"></th> 
-<th><img src="jpg/encyclopedia.jpg" title="Новая энциклопедия бодибилдинга. № 1 2 3 4 5"></th>
-<th><img src="jpg/arnold.jpg" title="Учебник культуризма"></th> 
-<th><a id="a156" src="jpg/byd_nyzhnim.jpg" title="Будь нужным: Семь правил жизни (аудиокнига)"></a></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="5"><h4><a href="https://flibusta.is/a/20365">Шварценеггер Арнольд</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/178835">Шевелева Ольга</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/20317"> Шекспир Уильям</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/34088"> Шелли Мэри</a></h4></th>
-<th colspan="6"><h4><a href="https://flibusta.is/a/16011"> Шефер Бодо</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="https://flibusta.is/a/121029">Шмидт Эрик</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/20317"> Шекспир Уильям</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/34088"> Шелли Мэри</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/vspomnit_vse.jpg" title="Вспомнить всё. Моя невероятно правдивая история"></th> 
+<th><img src="jpg/encyclopedia.jpg" title="Новая энциклопедия бодибилдинга. № 1 2 3 4 5"></th>
+<th><img src="jpg/arnold.jpg" title="Учебник культуризма"></th> 
+<th><a id="a156" src="jpg/byd_nyzhnim.jpg" title="Будь нужным: Семь правил жизни (аудиокнига)"></a></th>
+<th><img src="jpg/0.jpg"></th>	
 <th><img src="jpg/atlet_i_etiket.jpg" title="Атлет и этикет"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a134" src="jpg/korol_lir.jpg" title="Король Лир (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a136" src="jpg/frankishtein.jpg" title="Франкенштейн (аудиокнига)"></a></th>
-<th><img src="jpg/0.jpg"></th>
-<th><a id="a69" src="jpg/mani.jpg" title="Мани, или Азбука денег (аудиокнига)"></a></th>
-<th><a id="a72" src="jpg/shefer_2.jpg" title="Законы победителей (аудиокнига)"></th>
-<th><img src="jpg/0.jpg"></th>
-<th><a id="a47" src="jpg/google.jpg" title="Как работает Google (аудиокнига)"></a></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="3"><h4><a href="https://flibusta.is/a/16011"> Шефер Бодо</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/121029">Шмидт Эрик</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/239451">Шрайбер Флора</a></h4></th>	
-<th colspan="2"><h4><a href="https://flibusta.is/a/103027">Шульц Говард</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/71362"> Щеголев Илья</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/75550"> Экер Харв</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/51787"> Экман Пол</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/103027">Шульц Говард</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/71362"> Щеголев Илья</a></h4></th>
 </tr><tr>  
+<th><a id="a69" src="jpg/mani.jpg" title="Мани, или Азбука денег (аудиокнига)"></a></th>
+<th><a id="a72" src="jpg/shefer_2.jpg" title="Законы победителей (аудиокнига)"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><a id="a47" src="jpg/google.jpg" title="Как работает Google (аудиокнига)"></a></th>
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/sivilla.jpg" title="Сивилла"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a34" src="jpg/starbucks.jpg" title="Как чашка за чашкой строилась STARBUCKS (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/tainiy_yazyk_tela.jpg" title="Илья Щеголев и Владимир Людвич - Тайный язык тела"></th>
-<th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/dumai_kak_millioner.jpg" title="Думай как миллионер"></th>
-<th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/paul_ekman_1.jpg" title="Психология лжи"></th>
-<th><img src="jpg/paul_ekman_2.jpg" title="Узнай лжеца по выражению лица"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.is/a/75550"> Экер Харв</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/51787"> Экман Пол</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/33690"> Элбом Митч</a></h4></th>
 <th colspan="3"><h4><a href="https://flibusta.is/a/169013">Элрод Хэл</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/dumai_kak_millioner.jpg" title="Думай как миллионер"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/paul_ekman_1.jpg" title="Психология лжи"></th>
+<th><img src="jpg/paul_ekman_2.jpg" title="Узнай лжеца по выражению лица"></th> 
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/morri.jpg" title="Вторники с Морри, или Величайший урок жизни"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/magia_ytra.jpg" title="Магия утра"></th> 
