Прочитал Том Сойер - сыщик

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a175" src="jpg/tom_soer_4.jpg" title="Том Сойер - сыщик (аудиокнига)"></a></th>
 <th><a id="a174" src="jpg/tom_soer_3.jpg" title="Том Сойер за границей (аудиокнига)"></a></th>
 <th><a id="a173" src="jpg/atomic_heart_2.jpg" title="Atomic Heart. Далекое светлое будущее (аудиокнига)"></a></th>
 <th><a id="a172" src="jpg/tom_soer_2.jpg" title="Приключения Гекльберри Финна (аудиокнига)"></a></th>
@@ -1903,15 +1904,13 @@
 
 
 <table><tr align="left"> 
-<th colspan="7"><h4><a href="http://flibusta.is/a/12696"> Твен Марк</a></h4></th>
+<th colspan="5"><h4><a href="http://flibusta.is/a/12696"> Твен Марк</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/64713">Тиньков Олег</a></h4></th>
 </tr><tr>  
 <th><a id="a171" src="jpg/tom_soer_1.jpg" title="Приключения Тома Сойера (аудиокнига)"></a></th>
 <th><a id="a172" src="jpg/tom_soer_2.jpg" title="Приключения Гекльберри Финна (аудиокнига)"></a></th>
 <th><a id="a174" src="jpg/tom_soer_3.jpg" title="Том Сойер за границей (аудиокнига)"></a></th>
-<th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/0.jpg"></th>
+<th><a id="a175" src="jpg/tom_soer_4.jpg" title="Том Сойер - сыщик (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a30" src="jpg/tin'kov.jpg" title="Как стать бизнесменом (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
