Прочитал Объявлено убийство

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
 <th><a id="a175" src="jpg/tom_soer_4.jpg" title="Том Сойер - сыщик (аудиокнига)"></a></th>
 <th><a id="a174" src="jpg/tom_soer_3.jpg" title="Том Сойер за границей (аудиокнига)"></a></th>
 <th><a id="a173" src="jpg/atomic_heart_2.jpg" title="Atomic Heart. Далекое светлое будущее (аудиокнига)"></a></th>
@@ -1334,6 +1335,7 @@
 <th><img src="jpg/payro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
 <th><img src="jpg/endhouse.jpg" title="[Эркюль Пуаро] Загадка Эндхауза"></th> </tr>
 <tr> <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
+<th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
 <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
 <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
 <th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th> 
