Прочитал Глаза дракона

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a176" src="jpg/glaza_drakona.jpg" title="Глаза дракона (аудиокнига)"></a></th>
 <th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
 <th><a id="a175" src="jpg/tom_soer_4.jpg" title="Том Сойер - сыщик (аудиокнига)"></a></th>
 <th><a id="a174" src="jpg/tom_soer_3.jpg" title="Том Сойер за границей (аудиокнига)"></a></th>
@@ -1214,7 +1215,7 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4>									  Кинг Бернард</h4></th>
-<th colspan="5"><h4><a href="https://flibusta.is/a/5803"> Кинг Стивен</a></h4></th>
+<th colspan="6"><h4><a href="https://flibusta.is/a/5803"> Кинг Стивен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/17765">Киплинг Редьярд</a></h4></th>
 </tr><tr>  
 <th><a id="a2" src="jpg/privychki_uspeshnykh_lyudey.jpg" title="Привычки успешных людей (аудиокнига)"></a></th>
@@ -1223,6 +1224,7 @@
 <th><img src="jpg/zelenaya_milya.jpg" title="Зеленая Миля"></th>
 <th><img src="jpg/dolgaia_progylka.jpg" title="Долгая прогулка"></th>
 <th><img src="jpg/strelok.jpg" title="Стрелок"></th>
+<th><a id="a176" src="jpg/glaza_drakona.jpg" title="Глаза дракона (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a54" src="jpg/kniga_djunglei.jpg" title="Книга джунглей (аудиокнига)"></a></th> 
 <th><img src="jpg/0.jpg"></th>
