--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+	<th><img src="data/02.2025.jpg"></th>
 <th><img src="jpg/tom_soer_5.jpg" title="Заговор Тома Сойера"></th>
 <th><a id="a176" src="jpg/glaza_drakona.jpg" title="Глаза дракона (аудиокнига)"></a></th>
 <th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
