Прочитал Мистер Мерседес

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a177" src="jpg/mister_mers.jpg" title="Мистер Мерседес (аудиокнига)"></a></th>
 	<th><img src="data/02.2025.jpg"></th>
 <th><img src="jpg/tom_soer_5.jpg" title="Заговор Тома Сойера"></th>
 <th><a id="a176" src="jpg/glaza_drakona.jpg" title="Глаза дракона (аудиокнига)"></a></th>
@@ -1217,8 +1218,8 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4>									  Кинг Бернард</h4></th>
-<th colspan="6"><h4><a href="https://flibusta.is/a/5803"> Кинг Стивен</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/17765">Киплинг Редьярд</a></h4></th>
+<th colspan="8"><h4><a href="https://flibusta.is/a/5803"> Кинг Стивен</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/17765">Киплинг Редьярд</a></h4></th>
 </tr><tr>  
 <th><a id="a2" src="jpg/privychki_uspeshnykh_lyudey.jpg" title="Привычки успешных людей (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
@@ -1227,9 +1228,9 @@
 <th><img src="jpg/dolgaia_progylka.jpg" title="Долгая прогулка"></th>
 <th><img src="jpg/strelok.jpg" title="Стрелок"></th>
 <th><a id="a176" src="jpg/glaza_drakona.jpg" title="Глаза дракона (аудиокнига)"></a></th>
+<th><a id="a177" src="jpg/mister_mers.jpg" title="Мистер Мерседес (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a54" src="jpg/kniga_djunglei.jpg" title="Книга джунглей (аудиокнига)"></a></th> 
-<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
