Прочитал Загадочное происшествие в Стайлзе

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_1.jpg" title="[Эркюль Пуаро #1] Загадочное происшествие в Стайлзе"></th>
 <th><a id="a178" src="jpg/ismenennie_1.jpg" title="Семь дней до Мегиддо (аудиокнига)"></a></th>
 <th><img src="jpg/tom_soer_6.jpg" title="Школьная горка"></th>
 <th><a id="a177" src="jpg/mister_mers.jpg" title="Мистер Мерседес (аудиокнига)"></a></th>
@@ -37,7 +38,7 @@
 <th><img src="jpg/witcher_10.jpg" title="Перекрёсток воронов"></th> 
 <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
 	<th><img src="data/01.2025.jpg"></th>
-<th><img src="jpg/payro_12.jpg" title="[Эркюль Пуаро #12] Убийства по алфавиту"></th>
+<th><img src="jpg/pyaro_12.jpg" title="[Эркюль Пуаро #12] Убийства по алфавиту"></th>
 <th><a id="a168" src="jpg/metro_21.jpg" title="21. Сборник. Последнее убежище (аудиокнига)"></a></th>
 <th><img src="jpg/ironman.jpg" title="Ironman: история, а не истерия"></th>
 <th><img src="jpg/toxic_rodnia.jpg" title="Токсичные родственники"></th>
@@ -290,7 +291,7 @@
 <th><a id="a78" src="jpg/labirint_otr_1.jpg" title="Лабиринт отражений (аудиокнига)"></th>
 <th><a id="a77" src="jpg/enshtein.jpg" title="Правила жизни от Альберта Эйнштейна (аудиокнига)"></a></th>
 <th><a id="a76" src="jpg/metro_8.jpg" title="Север (аудиокнига)"></a></th>
-<th><img src="jpg/payro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
+<th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
 <th><a id="a75" src="jpg/metro_7.jpg" title="Странник (аудиокнига)"></a></th>
 <th><a id="a74" src="jpg/127_privichek.jpg" title="Лучше каждый день. 127 полезных привычек для здоровья, счастья и успеха (аудиокнига)"></a></th>
 <th><img src="jpg/metod_volka.jpg" title="Метод волка с Уолл-стрит. Откровения лучшего продавца в мире"></th>
@@ -372,7 +373,7 @@
 	<th><img src="data/03.2021.jpg"></th>
 <th><img src="jpg/vk.jpg" title="Код Дурова. Реальная история «ВКонтакте» и ее создателя"></th>
 <th><img src="jpg/s_krisa_1.jpg" title="Рождение Стальной крысы"></th>
-<th><img src="jpg/payro_10.jpg" title="[Эркюль Пуаро #10] Убийство в «Восточном экспрессе»"></th>
+<th><img src="jpg/pyaro_10.jpg" title="[Эркюль Пуаро #10] Убийство в «Восточном экспрессе»"></th>
 <th><img src="jpg/troia_3.jpg" title="Троя. Падение царей"></th>
 <th><a id="a40" src="jpg/klizma.jpg" title="Между клизмой и харизмой (аудиокнига)"></th>
 <th><img src="jpg/troia_2.jpg" title="Троя. Грозовой щит"></th>
@@ -1331,17 +1332,18 @@
 <table><tr align="left"> 
 <th colspan="10"><h4><a href="https://flibusta.is/a/6543">Кристи Агата</a></h4></th>
 </tr><tr>  
-<th><img src="jpg/payro_2.jpg" title="[Эркюль Пуаро #2] Убийство на поле для гольфа"></th>
-<th><img src="jpg/payro_4.jpg" title="[Эркюль Пуаро #4] Убийство Роджера Экройда"></th>
-<th><img src="jpg/payro_8.jpg" title="[Эркюль Пуаро #8] Смерть лорда Эдвера"></th>
-<th><img src="jpg/payro_10.jpg" title="[Эркюль Пуаро #10] Убийство в «Восточном экспрессе»"></th>
-<th><img src="jpg/payro_11.jpg" title="[Эркюль Пуаро #11] Смерть в облаках"></th>
-<th><img src="jpg/payro_12.jpg" title="[Эркюль Пуаро #12] Убийства по алфавиту"></th>
-<th><img src="jpg/payro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
-<th><img src="jpg/payro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
-<th><img src="jpg/payro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
-<th><img src="jpg/endhouse.jpg" title="[Эркюль Пуаро] Загадка Эндхауза"></th> </tr>
-<tr> <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
+<th><img src="jpg/pyaro_1.jpg" title="[Эркюль Пуаро #1] Загадочное происшествие в Стайлзе"></th>
+<th><img src="jpg/pyaro_2.jpg" title="[Эркюль Пуаро #2] Убийство на поле для гольфа"></th>
+<th><img src="jpg/pyaro_4.jpg" title="[Эркюль Пуаро #4] Убийство Роджера Экройда"></th>
+<th><img src="jpg/pyaro_8.jpg" title="[Эркюль Пуаро #8] Смерть лорда Эдвера"></th>
+<th><img src="jpg/pyaro_10.jpg" title="[Эркюль Пуаро #10] Убийство в «Восточном экспрессе»"></th>
+<th><img src="jpg/pyaro_11.jpg" title="[Эркюль Пуаро #11] Смерть в облаках"></th>
+<th><img src="jpg/pyaro_12.jpg" title="[Эркюль Пуаро #12] Убийства по алфавиту"></th>
+<th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
+<th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
+<th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th> </tr>
+<tr> <th><img src="jpg/endhouse.jpg" title="[Эркюль Пуаро] Загадка Эндхауза"></th>
+<th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
 <th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
 <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
 <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
