Прочитал Пуаро ведёт следствие

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_3.jpg" title="[Эркюль Пуаро #3] Пуаро ведёт следствие"></th>
 <th><a id="a180" src="jpg/ismenennie_3.jpg" title="Месяц за Рубиконом (аудиокнига)"></a></th>
 <th><a id="a179" src="jpg/ismenennie_2.jpg" title="Три дня Индиго (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_1.jpg" title="[Эркюль Пуаро #1] Загадочное происшествие в Стайлзе"></th>
@@ -1336,22 +1337,23 @@
 </tr><tr>  
 <th><img src="jpg/pyaro_1.jpg" title="[Эркюль Пуаро #1] Загадочное происшествие в Стайлзе"></th>
 <th><img src="jpg/pyaro_2.jpg" title="[Эркюль Пуаро #2] Убийство на поле для гольфа"></th>
+<th><img src="jpg/pyaro_3.jpg" title="[Эркюль Пуаро #3] Пуаро ведёт следствие"></th>
 <th><img src="jpg/pyaro_4.jpg" title="[Эркюль Пуаро #4] Убийство Роджера Экройда"></th>
 <th><img src="jpg/pyaro_8.jpg" title="[Эркюль Пуаро #8] Смерть лорда Эдвера"></th>
 <th><img src="jpg/pyaro_10.jpg" title="[Эркюль Пуаро #10] Убийство в «Восточном экспрессе»"></th>
 <th><img src="jpg/pyaro_11.jpg" title="[Эркюль Пуаро #11] Смерть в облаках"></th>
 <th><img src="jpg/pyaro_12.jpg" title="[Эркюль Пуаро #12] Убийства по алфавиту"></th>
 <th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
-<th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
-<th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th> </tr>
-<tr> <th><img src="jpg/endhouse.jpg" title="[Эркюль Пуаро] Загадка Эндхауза"></th>
+<th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th> </tr>
+<tr> <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
+<th><img src="jpg/endhouse.jpg" title="[Эркюль Пуаро] Загадка Эндхауза"></th>
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
 <th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
 <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
 <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
 <th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th> 
-<th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
 <th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
+<th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
 </tr></table>
 
 
