--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_5.jpg" title="[Эркюль Пуаро #5] Большая четвёрка"></th>
 <th><a id="a181" src="jpg/ismenennie_4.jpg" title="Лето волонтёра (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_3.jpg" title="[Эркюль Пуаро #3] Пуаро ведёт следствие"></th>
 <th><a id="a180" src="jpg/ismenennie_3.jpg" title="Месяц за Рубиконом (аудиокнига)"></a></th>
@@ -1340,13 +1341,14 @@
 <th><img src="jpg/pyaro_2.jpg" title="[Эркюль Пуаро #2] Убийство на поле для гольфа"></th>
 <th><img src="jpg/pyaro_3.jpg" title="[Эркюль Пуаро #3] Пуаро ведёт следствие"></th>
 <th><img src="jpg/pyaro_4.jpg" title="[Эркюль Пуаро #4] Убийство Роджера Экройда"></th>
+<th><img src="jpg/pyaro_5.jpg" title="[Эркюль Пуаро #5] Большая четвёрка"></th>
 <th><img src="jpg/pyaro_8.jpg" title="[Эркюль Пуаро #8] Смерть лорда Эдвера"></th>
 <th><img src="jpg/pyaro_10.jpg" title="[Эркюль Пуаро #10] Убийство в «Восточном экспрессе»"></th>
 <th><img src="jpg/pyaro_11.jpg" title="[Эркюль Пуаро #11] Смерть в облаках"></th>
 <th><img src="jpg/pyaro_12.jpg" title="[Эркюль Пуаро #12] Убийства по алфавиту"></th>
-<th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
-<th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th> </tr>
-<tr> <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
+<th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th> </tr>
+<tr> <th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
+<th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
 <th><img src="jpg/endhouse.jpg" title="[Эркюль Пуаро] Загадка Эндхауза"></th>
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
 <th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
