Прочитал Остров Русь

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a182" src="jpg/ostrov_rys_1.jpg" title="Остров Русь (аудиокнига)"></a></th>	
 <th><img src="jpg/pyaro_5.jpg" title="[Эркюль Пуаро #5] Большая четвёрка"></th>
 <th><a id="a181" src="jpg/ismenennie_4.jpg" title="Лето волонтёра (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_3.jpg" title="[Эркюль Пуаро #3] Пуаро ведёт следствие"></th>
@@ -1495,6 +1496,7 @@
 <th><a id="a179" src="jpg/ismenennie_2.jpg" title="Три дня Индиго (аудиокнига)"></a></th>
 <th><a id="a180" src="jpg/ismenennie_3.jpg" title="Месяц за Рубиконом (аудиокнига)"></a></th>
 <th><a id="a181" src="jpg/ismenennie_4.jpg" title="Лето волонтёра (аудиокнига)"></a></th>
+<th><a id="a182" src="jpg/ostrov_rys_1.jpg" title="Остров Русь (аудиокнига)"></a></th>	
 </tr></table>
 
 
