Прочитал Тайна Голубого поезда

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_6.jpg" title="[Эркюль Пуаро #6] Тайна «Голубого поезда»"></th>
 <th><a id="a184" src="jpg/ostrov_rys_2.jpg" title="Царь, царевич, король, королевич... (аудиокнига)"></a></th>
 <th><a id="a183" src="jpg/201_step.jpg" title="Двести первый шаг (аудиокнига)"></a></th>	
 <th><a id="a182" src="jpg/ostrov_rys_1.jpg" title="Остров Русь (аудиокнига)"></a></th>	
@@ -295,7 +296,7 @@
 <th><img src="jpg/alhimik.jpg" title="Алхимик"></th> 
 <th><a id="a80" src="jpg/labirint_otr_3.jpg" title="Прозрачные витражи (аудиокнига)"></th>
 <th><a id="a79" src="jpg/labirint_otr_2.jpg" title="Фальшивые зеркала (аудиокнига)"></th>
-<th><img src="jpg/endhouse.jpg" title="[Эркюль Пуаро] Загадка Эндхауза"></th>
+<th><img src="jpg/pyaro_7.jpg" title="[Эркюль Пуаро #7] Загадка Эндхауза"></th>
 <th><a id="a78" src="jpg/labirint_otr_1.jpg" title="Лабиринт отражений (аудиокнига)"></th>
 <th><a id="a77" src="jpg/enshtein.jpg" title="Правила жизни от Альберта Эйнштейна (аудиокнига)"></a></th>
 <th><a id="a76" src="jpg/metro_8.jpg" title="Север (аудиокнига)"></a></th>
@@ -1345,21 +1346,22 @@
 <th><img src="jpg/pyaro_3.jpg" title="[Эркюль Пуаро #3] Пуаро ведёт следствие"></th>
 <th><img src="jpg/pyaro_4.jpg" title="[Эркюль Пуаро #4] Убийство Роджера Экройда"></th>
 <th><img src="jpg/pyaro_5.jpg" title="[Эркюль Пуаро #5] Большая четвёрка"></th>
+<th><img src="jpg/pyaro_6.jpg" title="[Эркюль Пуаро #6] Тайна «Голубого поезда»"></th>
+<th><img src="jpg/pyaro_7.jpg" title="[Эркюль Пуаро #7] Загадка Эндхауза"></th>
 <th><img src="jpg/pyaro_8.jpg" title="[Эркюль Пуаро #8] Смерть лорда Эдвера"></th>
 <th><img src="jpg/pyaro_10.jpg" title="[Эркюль Пуаро #10] Убийство в «Восточном экспрессе»"></th>
-<th><img src="jpg/pyaro_11.jpg" title="[Эркюль Пуаро #11] Смерть в облаках"></th>
-<th><img src="jpg/pyaro_12.jpg" title="[Эркюль Пуаро #12] Убийства по алфавиту"></th>
-<th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th> </tr>
-<tr> <th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
+<th><img src="jpg/pyaro_11.jpg" title="[Эркюль Пуаро #11] Смерть в облаках"></th> </tr>
+<tr> <th><img src="jpg/pyaro_12.jpg" title="[Эркюль Пуаро #12] Убийства по алфавиту"></th>
+<th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
+<th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
 <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
-<th><img src="jpg/endhouse.jpg" title="[Эркюль Пуаро] Загадка Эндхауза"></th>
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
 <th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
 <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
 <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
 <th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th> 
-<th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
-<th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
+<th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th> </tr>
+<tr> <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
 </tr></table>
 
 
