Прочитал Трагедия в трех актах

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_9.jpg" title="[Эркюль Пуаро #9] Трагедия в трех актах"></th>
 <th><img src="jpg/pyaro_6.jpg" title="[Эркюль Пуаро #6] Тайна «Голубого поезда»"></th>
 <th><a id="a184" src="jpg/ostrov_rys_2.jpg" title="Царь, царевич, король, королевич... (аудиокнига)"></a></th>
 <th><a id="a183" src="jpg/201_step.jpg" title="Двести первый шаг (аудиокнига)"></a></th>	
@@ -1349,9 +1350,10 @@
 <th><img src="jpg/pyaro_6.jpg" title="[Эркюль Пуаро #6] Тайна «Голубого поезда»"></th>
 <th><img src="jpg/pyaro_7.jpg" title="[Эркюль Пуаро #7] Загадка Эндхауза"></th>
 <th><img src="jpg/pyaro_8.jpg" title="[Эркюль Пуаро #8] Смерть лорда Эдвера"></th>
-<th><img src="jpg/pyaro_10.jpg" title="[Эркюль Пуаро #10] Убийство в «Восточном экспрессе»"></th>
-<th><img src="jpg/pyaro_11.jpg" title="[Эркюль Пуаро #11] Смерть в облаках"></th> </tr>
-<tr> <th><img src="jpg/pyaro_12.jpg" title="[Эркюль Пуаро #12] Убийства по алфавиту"></th>
+<th><img src="jpg/pyaro_9.jpg" title="[Эркюль Пуаро #9] Трагедия в трех актах"></th>
+<th><img src="jpg/pyaro_10.jpg" title="[Эркюль Пуаро #10] Убийство в «Восточном экспрессе»"></th> </tr>
+<tr> <th><img src="jpg/pyaro_11.jpg" title="[Эркюль Пуаро #11] Смерть в облаках"></th>
+<th><img src="jpg/pyaro_12.jpg" title="[Эркюль Пуаро #12] Убийства по алфавиту"></th>
 <th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
 <th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
 <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
@@ -1359,9 +1361,9 @@
 <th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
 <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
 <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
-<th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th> 
-<th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th> </tr>
-<tr> <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
+<th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th>  </tr>
+<tr> <th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
+<th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
 </tr></table>
 
 
