Прочитал Ловец видений

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a185" src="jpg/lovec_videnii.jpg" title="Ловец видений (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_9.jpg" title="[Эркюль Пуаро #9] Трагедия в трех актах"></th>
 <th><img src="jpg/pyaro_6.jpg" title="[Эркюль Пуаро #6] Тайна «Голубого поезда»"></th>
 <th><a id="a184" src="jpg/ostrov_rys_2.jpg" title="Царь, царевич, король, королевич... (аудиокнига)"></a></th>
@@ -1505,6 +1506,7 @@
 <th><a id="a182" src="jpg/ostrov_rys_1.jpg" title="Остров Русь (аудиокнига)"></a></th>	
 <th><a id="a184" src="jpg/ostrov_rys_2.jpg" title="Царь, царевич, король, королевич... (аудиокнига)"></a></th> </tr>
 <tr> <th><a id="a183" src="jpg/201_step.jpg" title="Двести первый шаг (аудиокнига)"></a></th>
+<th><a id="a185" src="jpg/lovec_videnii.jpg" title="Ловец видений (аудиокнига)"></a></th>
 </tr></table>
 
 
